# hass-z21-control

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  hacs.json  pyproject.toml  z21-lan-protocol.md
.github/workflows/: hassfest.yml
custom_components/z21/: __init__.py  binary_sensor.py  button.py  client.py  config_flow.py  const.py  coordinator.py  manifest.json  protocol.py  sensor.py  strings.json  switch.py
custom_components/z21/translations/: de.json  en.json
docs/adr/: 0001-symmetric-io-seam.md  0002-control-feedback-via-system-state.md
docs/agents/: domain.md  issue-tracker.md
tests/: conftest.py  test_binary_sensor.py  test_button.py  test_client.py  test_config_flow.py  test_const.py  test_init.py  test_protocol.py  test_sensor.py  test_switch.py
