[project]
name = "hass-z21-control"
version = "0.1.0"
description = "Home Assistant custom integration for Roco Z21-compatible command stations."
requires-python = ">=3.11"
# Zero runtime dependencies (pure-Python codec; transport uses stdlib asyncio).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
