[project]
name = "hass-z21-control"
version = "0.1.0"
description = "Home Assistant custom integration for Roco Z21-compatible command stations."
requires-python = ">=3.11"
# Zero runtime dependencies (pure-Python codec; transport uses stdlib asyncio).
dependencies = []

[project.optional-dependencies]
# pytest-homeassistant-custom-component pulls in homeassistant + voluptuous +
# pytest-asyncio, needed only to exercise the HA config flow. Runtime deps stay
# empty. The pure protocol/client suites remain HA-free.
dev = ["pytest>=7.0", "pytest-homeassistant-custom-component>=0.13.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
